# learnos

./: CMakeLists.txt  README.md  addfile.sh  bochsrc  boot.img  c.sh  cmd.txt
bootloader/: Makefile  boot.asm  loader.asm
kernel/: Kernel.lds  Makefile  head.S  head.s  lib.h  linkage.h  main.c  printk.c  printk.h  system
kernel/interrupt/: entry.S  gate.h  interrupt.c  interrupt.h  trap.c  trap.h
kernel/lib/: lib.h
kernel/memory/: memory.c  memory.h
kernel/print/: font.h  printk.c  printk.h
kernel/task/: cpu.h  ptrace.h  task.c  task.h
